--- a/SosExercise.Tests/SosExercise.Tests.csproj
+++ b/SosExercise.Tests/SosExercise.Tests.csproj
@@ -56,7 +56,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AsosExercise\SosExercise.csproj">
+    <ProjectReference Include="..\SosExercise\SosExercise.csproj">
       <Project>{807f7cd2-3135-468e-a1a5-e330318dfa06}</Project>
       <Name>SosExercise</Name>
     </ProjectReference>
